// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle should be display the product name 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffee Mug - Card
  </span>
</div>
`;

exports[`ProductTitle should be render correctly with the custom title 1`] = `
<span
  className="productDescription undefined"
>
  Custom Product
</span>
`;
